compiler/tests/fixtures/negative/error_sema_bitwise.sol
// E1010: bitwise operators require integer operands.
function start() -> int {
    return 1.0 & 2.0;
}
